# Germany-Hannover

./: .gitmodules  README.md
11-4-2016/: news.MD
11-4-2016/testing-with-catch/: .clang-format  README.md
11-4-2016/testing-with-catch/demo-and-experiments/: CMakeLists.txt
11-4-2016/testing-with-catch/demo-and-experiments/test/: CMakeLists.txt  MyFirstTest.cpp
11-4-2016/testing-with-catch/gmock-integration/: CMakeLists.txt
11-4-2016/testing-with-catch/gmock-integration/test/: CMakeLists.txt  DemonstrateIntegrationWithGMock.cpp
11-4-2016/testing-with-catch/operator<</: CMakeLists.txt
11-4-2016/testing-with-catch/operator<</test/: CMakeLists.txt  DemonstrateStringifyOfStruct.cpp
11-4-2016/testing-with-catch/slides/: Testing_with_Catch.ipynb
11-4-2016/testing-with-catch/trompeloeil-integration/: CMakeLists.txt
11-4-2016/testing-with-catch/trompeloeil-integration/test/: CMakeLists.txt  DemonstrateIntegrationWithTrompeloeil.cpp
13-6-2016/executing_brainfuck_at_compile_time_with_cpp_templates/: cpp_tmp_bf_interpreter.ipynb
8-8-2016/: cond_var.cpp  mutex.cpp  thread.cpp  thread_save_interface.cpp  threads.key
dojos/: CMakeLists.txt  impl.cpp  incl.hpp  tests.cpp
dojos/calc_express/: CMakeLists.txt  impl.cpp  incl.hpp  readme.MD  tests.cpp
stm32/: Dockerfile  docker-compose.yml
stm32/demo/: Makefile
stm32/demo/src/: core_cm4.h  core_cm4_simd.h  core_cmFunc.h  core_cmInstr.h  main.c  startup_stm32f4xx.s  stm32f4xx.h  stm32f4xx_conf.h  stm32f4xx_gpio.c  stm32f4xx_gpio.h  stm32f4xx_rcc.c  stm32f4xx_rcc.h  system_stm32f4xx.c  system_stm32f4xx.h
